src/main/resources/public/css/additional.css
ul {
    list-style-type: none;
    margin-top: 0;
    width: 99%;
    border-left: 5px solid transparent !important;
    padding-left: 10px;
    padding-right: 15px;
}

ul li i {
    color: #FF8500;
}

ul li i.caret {
    height: 20px;
    width: 25px;
    display: block;
    float: left !important;
    color: #fff;
    font-size: 25px;
    font-family: Arial;
    font-weight: 900;
}

ul li i.caret::before {
    content: "▸";
    color: #FF8500;
}

ul li i.caret.expanded::before {
    content: "▾";
    color: #FF8500;
}

ul li i.caret::before {
    content: "▸";
    color: #FF8500;
}

ul li i.icon {
    font-size: 55px;
    line-height: 55px;
    text-align: center;
}

i.rack2::before {
    content: "\e80d";
    font-family:"fontello";
    -webkit-font-smoothing:antialiased;
    -moz-osx-font-smoothing:grayscale;
    background-image:none;
}

i.cahier-textes2::before {
    content: "\e86f";
    font-family:"fontello";
    -webkit-font-smoothing:antialiased;
    -moz-osx-font-smoothing:grayscale;
    background-image:none;
}

.table-cell, .table-cell-left{
    display: table-cell;
    vertical-align: top;
}

.table-cell-left {
    padding-right: 10px;
}

.cell-no-float {
    box-sizing: border-box;
    float: none;
    display: block;
    position: relative;
}

i.pencil::before {
    content: "\e852";
    font-family:"fontello";
    -webkit-font-smoothing:antialiased;
    -moz-osx-font-smoothing:grayscale;
    background-image:none;
}

div.days div div {
    padding-bottom: 1px;
}


div.test .pink {
    background-color: white;
    color: #b930a2;
}

div.test .orange {
    background-color: white;
    color: #FF8500;
}

div.test .purple {
    background-color: white;
    color: #763294;
}

div.test .green {
    background-color: white;
    color: #46bfaf;
}

.homework-content {
    height: 32px;
    border: solid 2px;
    background-color: white;
    border-radius: 5px;
    padding-left: 5px;
    font-size: 12px;
    line-height: 12px;
    text-align: left;
}

